--- a/src/assets/style/banner.css
+++ b/src/assets/style/banner.css
@@ -1,15 +1,18 @@
 header {
     display: flex;
-    margin-top: 12%;
+    margin-top: 20%;
     column-gap: 5%;
+    height: 1000px;
+    background-color: black;
 }
 
 .banner-container-1 {
     flex: 3;
     font-size: xx-large;
-    padding-top: 5%
+    padding-top: 5%;
+    animation: appear 2s ease-in;
 }
-
+    
 .banner-container-1 > h4 {
     border-radius: 5px;
     border: 1.5px solid lightgray;
@@ -20,8 +23,21 @@ header {
 
 .banner-container-1 h1 {
     padding: 12px 0;
+    white-space: normal;
+    overflow: hidden;
+}   
+
+.banner-container-1 h1 .text {
+    white-space: nowrap;
+    overflow: hidden;
 }
 
+.banner-container-1 h1 .cursor {
+    display: inline-block;
+    width: 5px;
+    animation: blink 1s infinite;
+}
+    
 .banner-container-1 p {
     opacity: 0.7;
     font-size: x-large;
@@ -32,8 +48,15 @@ header {
 
 .banner-container-1 .connect-content {
     display: flex;
-    padding-top: 64px;
+    margin-top: 64px;
 }
+
+.banner-container-1 .connect-content:hover {
+    opacity: 0.7;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
 
 .banner-container-1 .connect-content .c-arr-r-icon{
     width: 48px;
@@ -44,16 +67,30 @@ header {
 .banner-container-2 {
     flex: 2;
     height: 80%;
-    animation: upAndDown 2s infinite alternate;
+    animation: appear 2s ease-in,upAndDown 2s infinite alternate;
     z-index: 1;
 }
 
+@keyframes appear {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+    
+}
 @keyframes upAndDown {
     from{
-        transform: translateY(-48px) ;
+        transform: translateY(-24px) ;
     }
     to{
-        transform: translateY(0px);
+        transform: translateY(24px);
     }
 }
 
+@keyframes blink {
+    50% {
+        opacity: 0;;
+    }
+}
