--- a/src/assets/style/banner.css
+++ b/src/assets/style/banner.css
@@ -1,10 +1,16 @@
+#banner {
+    background-image: url(../img/banner-bg.png);
+    min-height: 100vh;
+}
+
 header {
     display: flex;
     margin-top: 20%;
     column-gap: 5%;
     height: 1000px;
-    background-color: black;
+    width: 80%;
 }
+
 
 .banner-container-1 {
     flex: 3;
