--- a/src/assets/style/navBar.css
+++ b/src/assets/style/navBar.css
@@ -1,15 +1,18 @@
 nav {
     display: flex;
-    justify-content: space-between;
-    width: 85%;
+    justify-content: center;
     padding: 36px 0;
     font-size: 24px;
     animation: appear 1s ease-in;
     z-index: 2;
     position: fixed;
-    
+    width: 100%;
 }
 
+#nav-container {
+    display: flex;
+    width: 80%;
+}
 .nav-container-1 {
     flex: 3;
     display: flex;
