--- a/src/assets/style/skills.css
+++ b/src/assets/style/skills.css
@@ -1,4 +1,5 @@
 section {
     height: 600px;
-    background-color: black;
+    /* background-color: black; */
+    background-image: url(../img/contact-img.svg);
 }
