--- a/src/assets/style/banner.css
+++ b/src/assets/style/banner.css
@@ -1,14 +1,16 @@
 #banner {
     background-image: url(../img/banner-bg.png);
     min-height: 100vh;
+    display: flex;
+    justify-content: center;
 }
 
 header {
     display: flex;
     margin-top: 20%;
     column-gap: 5%;
-    height: 1000px;
-    width: 80%;
+    height: 100%;
+    width: 85%;
 }
 
 
@@ -27,19 +29,19 @@ header {
     background: linear-gradient(to right, #642956, #38246d);
 }
 
-.banner-container-1 h1 {
+.banner-container-1 h2 {
     padding: 12px 0;
     white-space: normal;
     overflow: hidden;
 }   
 
-.banner-container-1 h1 .text {
+.banner-container-1 h2 .text {
     white-space: nowrap;
     overflow: hidden;
 }
 
-.banner-container-1 h1 .cursor {
-    display: inline-block;
+.banner-container-1 h2 .cursor {
+    overflow: hidden;
     width: 5px;
     animation: blink 1s infinite;
 }
@@ -72,9 +74,14 @@ header {
 
 .banner-container-2 {
     flex: 2;
-    height: 80%;
     animation: appear 2s ease-in,upAndDown 2s infinite alternate;
     z-index: 1;
+}
+
+.banner-container-2 img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
 }
 
 @keyframes appear {
