--- a/src/assets/style/skills.css
+++ b/src/assets/style/skills.css
@@ -1,5 +1,17 @@
-section {
-    height: 600px;
-    /* background-color: black; */
-    background-image: url(../img/contact-img.svg);
+#skills {
+  min-height: 100vh;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+#skills-section {
+  height: 100%;
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+    
