--- a/src/assets/style/skills.css
+++ b/src/assets/style/skills.css
@@ -1,17 +1,75 @@
 #skills {
   min-height: 100vh;
-  background-color: black;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  /* background: linear-gradient(to top, #2e2552, #3f2435); */
+  background-color: black;
 }
 
 #skills-section {
-  height: 100%;
+  height: 85%;
   width: 85%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-    
+
+#skills-section h1 {
+  font-size: 72px;
+  margin: 5%;
+}
+
+.skills-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+}
+
+.skill {
+}
+
+.skills-container li {
+  width: 100px;
+  height: 121px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 2%;
+}
+
+.skills-container li:hover {
+  transform: scale(1.1);
+}
+
+.skills-container li p {
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 10px;
+}
+
+.skills-container li:hover p {
+  cursor: pointer;
+}
+
+.skills-container li img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
+  transform: scale(0.8);
+  mix-blend-mode: screen;
+  filter: invert(1);
+}
+
+.skills-container li:hover img {
+  mix-blend-mode: normal;
+  filter: invert(0);
+}
