--- a/src/assets/style/projects.css
+++ b/src/assets/style/projects.css
@@ -16,6 +16,11 @@
   height: 100%;
 }
 
+#projects-section h1 {
+  font-size: 72px;
+  margin: 5%;
+}
+
 .projects-container {
   list-style-type: none;
   width: 100%;
