--- a/src/assets/style/banner.css
+++ b/src/assets/style/banner.css
@@ -1,5 +1,5 @@
 #banner {
-    background-image: url(../img/banner-bg.png);
+    /*background-image: url(../img/banner-bg.png);*/
     min-height: 100vh;
     display: flex;
     justify-content: center;
