--- a/src/assets/style/navBar.css
+++ b/src/assets/style/navBar.css
@@ -41,6 +41,8 @@ nav {
 
 .nav-container-2-ul-1 li{
     opacity: 0.5;
+    width: 25%;
+    height: 100%;
 }
 .nav-container-2-ul-1 li:hover {
     opacity: 1;
@@ -49,6 +51,20 @@ nav {
 
 .nav-container-2-ul-1 .active {
     opacity: 1 !important;
+}
+
+.nav-container-2-ul-1 li button{
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background: none;
+    color: white;
+    font-size: 24px;
+    letter-spacing: 1px;
+    font-weight: bold;
+    font-family: Centra, sans-serif;
 }
 
 .nav-container-2-ul-2 {
