--- a/src/assets/style/navBar.css
+++ b/src/assets/style/navBar.css
@@ -1,126 +1,149 @@
 nav {
-    display: flex;
-    justify-content: center;
-    padding: 36px 0;
-    font-size: 24px;
-    animation: appear 1s ease-in;
-    z-index: 2;
-    position: fixed;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 36px 0;
+  font-size: 24px;
+  animation: appear 1s ease-in;
+  z-index: 2;
+  position: fixed;
+  width: 100%;
 }
 
 #nav-container {
-    display: flex;
-    width: 85%;
+  display: flex;
+  width: 85%;
 }
 .nav-container-1 {
-    flex: 3;
-    display: flex;
-    align-items: center;
+  flex: 3;
+  display: flex;
+  align-items: center;
 }
 
 .nav-container-2 {
-    display: flex;
-    flex: 5;
-    width: 100%;
+  display: flex;
+  flex: 5;
+  width: 100%;
 }
 
 .nav-container-2 ul {
-    display: flex;
-    list-style-type: none;
-    width: 100%;
-    justify-content: space-evenly;
-    align-items: center;
+  display: flex;
+  list-style-type: none;
+  width: 100%;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .nav-container-2-ul-1 {
-    flex: 3;
-    display: flex;
-    justify-content: space-evenly;
+  flex: 3;
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.nav-container-2-ul-1 li{
-    opacity: 0.5;
-    width: 25%;
-    height: 100%;
+.nav-container-2-ul-1 li {
+  opacity: 0.5;
+  width: 25%;
+  height: 100%;
 }
 .nav-container-2-ul-1 li:hover {
-    opacity: 1;
-    transition: 0.5s;
+  opacity: 1;
 }
 
 .nav-container-2-ul-1 .active {
-    opacity: 1 !important;
+  opacity: 1 !important;
 }
 
-.nav-container-2-ul-1 li button{
-    width: 100%;
-    height: 100%;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    background: none;
-    color: white;
-    font-size: 24px;
-    letter-spacing: 1px;
-    font-weight: bold;
-    font-family: Centra, sans-serif;
+.nav-container-2-ul-1 li button {
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background: none;
+  color: white;
+  font-size: 24px;
+  letter-spacing: 1px;
+  font-weight: bold;
+  font-family: Centra, sans-serif;
 }
 
 .nav-container-2-ul-2 {
-    flex: 2;
+  flex: 2;
 }
 
 .nav-container-2-ul-2 li:hover {
-    transform: scale(1.1);
-    transition: 0.5s;
+  transform: scale(1.1);
+  transition: 0.5s;
 }
 .nav-container-2-ul-2 li {
-    border-radius: 50%;
-    border: white 1px solid;
-    padding: 11px;
-    height: 48px;
-    backdrop-filter: blur(10px);
-    background: rgba(255, 255, 255, 0.1);
-    cursor: pointer;
+  border-radius: 50%;
+  border: white 1px solid;
+  padding: 11px;
+  height: 48px;
+  backdrop-filter: blur(10px);
+  background: rgba(255, 255, 255, 0.1);
+  cursor: pointer;
 }
 
-.nav-container-2-ul-2 li img{
-    height: 100%;
-    z-index: 1;
+.nav-container-2-ul-2 li img {
+  height: 100%;
+  z-index: 1;
 }
 
 .nav-container-2 ul li a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 .nav-container-2-connect-btn {
-    flex: 1;
-    background: none;
-    border: 1px solid white;
-    color: white;
-    margin-left: 64px;
-    padding: 24px;
-    font-size: 24px;
-    cursor: pointer;
-    border-radius: 10px;
+  flex: 1;
+  background: none;
+  border: 1px solid white;
+  color: white;
+  margin-left: 64px;
+  padding: 24px;
+  font-size: 24px;
+  cursor: pointer;
+  border-radius: 10px;
 }
 
 .nav-container-2-connect-btn:hover {
-    transform: scale(1.1);
-    background: white;
-    color: black;
-    transition: 0.5s;
-    opacity: 0.8;
+  transform: scale(1.1);
+  background: white;
+  color: black;
+  transition: 0.5s;
+  opacity: 0.8;
 }
 
 @keyframes appear {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
-
+@media (max-width: 768px) {
+  nav {
+    justify-content: end;
+  }
+  #nav-container {
+    flex-direction: column;
+  }
+  .nav-container-2 {
+    align-self: flex-end;
+    /* width: 80%; */
+    flex-direction: column;
+    align-items: center;
+    background-color: black;
+  }
+  .nav-container-2-connect-btn {
+    margin: 0;
+    margin-top: 16px;
+  }
+}
+@media (max-width: 1024px) {
+  .nav-container-2-ul-1 {
+    flex-direction: column;
+    align-items: center;
+  }
+}
